1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: All parts of GNOME will now require
	LibGTop >= 0.99.0 which is the latest version from CVS and
	already feature-freezed for GNOME 1.0.
	
1998-12-09  Martin Baulig  <martin@home-of-linux.org>

	* aclocal-include.m4 (AM_ACLOCAL_INCLUDE): Make this work
	with more than one directory.

1998-12-08  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Moved into the LibGTop module.
	This file contains too much stuff that should only be used
	internally in LibGTop, so it's better to have it there.

1998-12-06  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Recognice OpenBSD as a valid
	system and use the `freebsd' sysdeps directory for it.

Sat Dec  5 23:30:01 PST 1998 Manish Singh <yosh@gimp.org>

	* gnome-guile-checks.m4: clear GUILE_LIBS and GUILE_INCS if
	guile isn't there (quick fix)

1998-12-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Recognice NetBSD as a valid
	system and use the `freebsd' sysdeps directory for it.

1998-12-03  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (GLIBTOP_LINUX_VERSION_CODE):
	Define this to be the same as LINUX_VERSION_CODE either from
	<linux/version.h> or from the running kernel.

1998-12-02  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: "Improve" indentation and messages somewhat.

1998-12-01  Jeff Garzik  <jgarzik@pobox.com>

	* autogen.sh:
	Platform fixes.  grep -q is not portable, do not use.

1998-12-01  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* autogen.sh: Run gettextize if needed.
	: Run libtoolize only if configure.in has "^AM_PROG_LIBTOOL".

1998-11-30  Jeff Garzik  <jgarzik@pobox.com>

	* gnome.m4: Re-arranged tests such that "--without-gnome" is
	fully supported.  Not only is the logic now correct, programs
	can test "want_gnome=yes/no" for the results of this arg.

1998-11-27  Martin Baulig  <martin@home-of-linux.org>
